x.y.z
=====

New features:

* Fix GitHub Issue #38: Add display grid option

Bug fixes:

* Fix Github Issue #106: Memory leak when changing Edge width, Text size and corner radius

Other:

1.19.0
======

New features:

* Fix GitHub Issue #77: Ctrl+S on new map should directly open 'save as' dialog
* Fix GitHub Issue #85: Export SVG
* Fix GitHub Issue #100: Use a better initial directory when saving a new file
* Add Dutch translations

Bug fixes:

* Fix GitHub Issue #87: Group move doesn't work with the move handle
* Fix GitHub Issue #97: Redo does stuff when redo shouldn't be possible
* Fix GitHub Issue #96: Saving sometimes doesn't work after loading an existing file

Other:

* Fix GitHub Issue #99: Program doesn't remember grid size
* Fix GitHub Issue #101: Windows portable

1.18.0
======

New features:

* Add a shortcut Ctrl+Shift+F to create new floating nodes

Bug fixes:

* Make layout optimizer honor the active grid setting

Other:

* Usability improvement: Move create node action to top
* Usability improvement: Set optimize button as the default

1.17.0
======

New features:

* Fix GitHub Issue #50: Autoarrange Nodes
  - Implements a layout optimizer based on combinatorial optimization
  - Adds a new menu entry 'Edit => Optimize layout'

Bug fixes:

* Fix GitHub Issue #88: Crash when opening a new file in a certain scenario
* Fix GitHub Issue #89: Default Right-to-Left Text 

1.16.0
======

New features:

* Fix GitHub Issue #83: Add option to copy-drag nodes
  - By checking "Copy on drag" checkbox on the toolbar
    one can copy a node just by dragging a new connected node

* Add Ctrl+0 as shortcut for zoom to fit

Bug fixes:

* Fix GitHub Issue #70: Edge tries to reposition while moving a group

Other:

* Make the Full Screen menu action checkable to avoid confusion

* General code refactoring

* Upgraded to C++14

1.15.1
======

Other:

* Update Italian translations
* Use Argengine as the CLI argument parser

1.15.0
======

New features:
